# Algo-Trading

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  ToDo.md  plan.txt  pyproject.toml
apps/: traderunner_demo.py
backend/: __init__.py  data.py  traderunner.py
config/: config.json  contracts.json  portfolio.yaml
docs/: adapters.md  architecture.md  migration.md  project_guide.md  setup.md  strategies.md
examples/: metatrader_demo.py
historical_data_services/: __init__.py  ibkr_data_fetch.py  polygon_data_fetch.py  polygon_ticker_fetch.ipynb
ibkr_client/: account.py  connection.py  tickets.py
live_bot/: pyproject.toml
live_bot/config/: .env.template  settings.yaml
live_bot/src/: main.py  notifier.py
live_bot/src/bot/: formatter.py  handlers.py
live_bot/src/db/: reader.py
live_bot/tests/: test_formatter.py  test_notifier.py  test_reader.py
research/: test.ipynb
scanner_bot/.claude/: settings.local.json
scanner_bot/fx_insight_bot/: pyproject.toml
scanner_bot/fx_insight_bot/config/: .env.template  settings.yaml
scanner_bot/fx_insight_bot/src/: main.py
scanner_bot/fx_insight_bot/src/analysis/: cars.py  timezone.py
scanner_bot/fx_insight_bot/src/bot/: formatter.py  handlers.py
scanner_bot/fx_insight_bot/src/report/: generator.py
scanner_bot/fx_insight_bot/tests/: conftest.py  test_indicators.py
services/: ibkr_data_fetch.py
strategies/: __init__.py
tele_bot/: .gitignore  pyproject.toml
tele_bot/config/: .env.template  settings.yaml
tele_bot/notebooks/: analysis_preview.ipynb
tele_bot/src/: main.py
tele_bot/tests/: test_cache_cooldown.py  test_cars.py  test_charts.py  test_event_analysis.py  test_methodology.py  test_pca_core.py  test_pca_etf.py  test_pca_fx.py  test_technical_matrix.py  test_timezone.py
tests/: test_buy_and_hold_strategy.py  test_capital_allocator.py  test_data_quality.py  test_equity_tracker.py  test_gotobi_calendar.py  test_ibkr_config.py  test_mt5_execution_client.py  test_multi_venue_backtest.py  test_orchestrator.py  test_persistence.py  test_pnl_metrics.py  test_retry.py  test_rsi_macd_ma_signal.py  test_store_persistence.py  test_strategy_live_helpers.py  traderunner_demo.ipynb
tests/notebooks/: backtest_demo.executed.ipynb  backtest_demo.ipynb  data_fetch.ipynb  live_demo.ipynb
trader/: __init__.py
trader/capital/: allocator.py
trader/config/: live_node.py  node.py  orchestrator.py
trading_system.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
(+66 files in other folders)
